fix: mobile overlap issue

--- a/src/components/home/introduction/introduction.module.css
+++ b/src/components/home/introduction/introduction.module.css
@@ -4,17 +4,17 @@
 }
 
 .background {
-  margin-top: 30px;
+  margin-top: 100px;
   background: #f3f5f7;
 }
 
 .imageWrapper {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   padding: 15px;
 }
 
 .image {
+  margin-top: -75px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0.5rem 1rem;
 }
 
